--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -68,3 +68,8 @@
 		@apply bg-background text-foreground;
 	}
 }
+
+* {
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
