feat: Add Header and Sidebar components to AuthenticatedLayout
- Added the Header component to display the user menu and search input in the header section of the AuthenticatedLayout.
- Added the Sidebar component to display navigation links in the sidebar section of the AuthenticatedLayout.

--- a/src/layouts/AuthenticatedLayout.astro
+++ b/src/layouts/AuthenticatedLayout.astro
@@ -1,7 +1,19 @@
 ---
+import Header from "@/components/core/Header.tsx";
+import Sidebar from "@/components/core/Sidebar";
 import BaseLayout from "@/layouts/BaseLayout.astro";
 ---
 
 <BaseLayout>
-	<slot />
+	<div
+		class="grid min-h-screen w-full md:grid-cols-[220px_1fr] lg:grid-cols-[280px_1fr]"
+	>
+		<Sidebar client:load />
+		<div class="flex flex-col">
+			<Header client:idle />
+			<main class="flex flex-1 flex-col">
+				<slot />
+			</main>
+		</div>
+	</div>
 </BaseLayout>
