--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -73,3 +73,18 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
+
+
+::-webkit-scrollbar {
+	width: 16px;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: hsl(var(--input));
+	border-radius: 16px;
+	border: 5px solid hsl(var(--background));
+}
+
+::-webkit-scrollbar-button {
+	display: none;
+}
