--- a/src/layouts/AuthenticatedLayout.astro
+++ b/src/layouts/AuthenticatedLayout.astro
@@ -1,11 +1,20 @@
 ---
-import Layout from "@/layouts/AuthenticatedLayout";
+import Header from "@/components/core/Header";
+import Sidebar from "@/components/core/Sidebar";
 import BaseLayout from "@/layouts/BaseLayout.astro";
 const currentPath = Astro.url.pathname;
 ---
 
 <BaseLayout>
-	<Layout client:load currentPath={currentPath}>
-		<slot />
-	</Layout>
+	<div
+		class="grid min-h-screen w-full md:grid-cols-[220px_1fr] lg:grid-cols-[280px_1fr]"
+	>
+		<Sidebar currentPath={currentPath} client:load />
+		<div class="flex flex-col">
+			<Header client:load />
+			<main class="flex flex-1 basis-0 flex-col overflow-auto">
+				<slot />
+			</main>
+		</div>
+	</div>
 </BaseLayout>
