--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -4,7 +4,9 @@ import Head from "@/components/core/Head.astro";
 
 <html class="h-full" lang="en">
 	<Head />
-	<body class="h-full min-h-screen overflow-hidden">
+	<body
+		class="h-full min-h-screen overflow-hidden bg-background font-sans antialiased"
+	>
 		<slot />
 	</body>
 </html>
