--- a/src/layouts/AuthenticatedLayout.astro
+++ b/src/layouts/AuthenticatedLayout.astro
@@ -31,6 +31,7 @@ const handleNavigate = (href: string) => {
 			links={filteredLinks}
 			currentPath={currentPath}
 			client:load
+			transition:persist
 		/>
 
 		<div class="flex flex-1 flex-col">
