--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,11 +2,9 @@
 import Head from "@/components/core/Head.astro";
 ---
 
-<html class="h-full" lang="en">
+<html lang="en">
 	<Head />
-	<body
-		class="h-full min-h-screen overflow-hidden bg-background font-sans antialiased"
-	>
+	<body class="h-full min-h-screen bg-background font-sans antialiased">
 		<slot />
 	</body>
 </html>
