feat: Update dropdown menus and styles
- Updated ModeToggle component to include a modal prop in the DropdownMenu.
- Updated UserAccountNav component to include a modal prop in the DropdownMenu.
- Removed async keyword from OrdersPage function in Orders.tsx.
- Added scrollbar-gutter property to :root in globals.css.
- Made various style extensions and updates in tailwind.config.ts.

These changes improve the functionality and appearance of dropdown menus, remove unnecessary async keyword, and update global styles.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -77,6 +77,10 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+:root {
+	scrollbar-gutter: stable;
+}
+
 @layer utilities {
 	.step {
 		counter-increment: step;
