feat: Add transitions to layout components
- Added `transition:animate="slide"` to the `<main>` element in `AuthenticatedLayout.astro`
- Added `transition:animate="fade"` to the `<html>` element in `BaseLayout.astro`

--- a/src/layouts/AuthenticatedLayout.astro
+++ b/src/layouts/AuthenticatedLayout.astro
@@ -58,7 +58,7 @@ const handleNavigate = (href: string) => {
 				</MaxWidthWrapper>
 			</header>
 
-			<main class="flex-1 p-4 xl:px-8">
+			<main class="flex-1 p-4 xl:px-8" transition:animate="slide">
 				<MaxWidthWrapper
 					className="flex h-full flex-col gap-4 px-0 lg:gap-6"
 				>
