--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,7 +2,7 @@
 import Head from "@/components/core/Head.astro";
 ---
 
-<html class="h-full" lang="en" transition:animate="fade">
+<html class="h-full" lang="en" transition:animate="none">
 	<Head />
 	<body class="h-full min-h-screen bg-background font-sans antialiased">
 		<slot />
