--- a/src/pages/settings/index.astro
+++ b/src/pages/settings/index.astro
@@ -1,5 +1,5 @@
 ---
-import OrdersPage from "@/components/routes/Orders";
+import SettingsPage from "@/components/routes/Settings";
 import AuthenticatedLayout from "@/layouts/AuthenticatedLayout.astro";
 import { userCanAccessResource } from "@/lib/auth";
 
@@ -14,5 +14,5 @@ if (!userCanAccessResource(user, Astro.url)) {
 ---
 
 <AuthenticatedLayout>
-	<OrdersPage client:load />
+	<SettingsPage client:load user={user} />
 </AuthenticatedLayout>
