--- a/src/pages/orders/index.astro
+++ b/src/pages/orders/index.astro
@@ -1,14 +1,17 @@
 ---
 import OrdersPage from "@/components/routes/Orders";
 import AuthenticatedLayout from "@/layouts/AuthenticatedLayout.astro";
-import { userCanAccessResource } from "@/lib/auth";
+import { auth, userCanAccessResource } from "@/lib/auth";
 
-const user = Astro.locals.user;
-if (!user) {
+const session = await auth.api.getSession({
+	headers: Astro.request.headers,
+});
+
+if (!session) {
 	return Astro.redirect("/login");
 }
 
-if (!userCanAccessResource(user, Astro.url)) {
+if (!userCanAccessResource(session.user, Astro.url)) {
 	return Astro.redirect("/unauthorized");
 }
 ---
