--- a/src/components/core/Head.astro
+++ b/src/components/core/Head.astro
@@ -1,5 +1,6 @@
 ---
 import { ClientRouter } from "astro:transitions";
+import { siteConfig } from "config";
 import "@/styles/globals.css";
 ---
 
@@ -7,9 +8,9 @@ import "@/styles/globals.css";
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="x-ua-compatible" content="IE=edge,chrome=1" />
-	<meta name="theme-color" content="#ffffff" />
-	<meta name="msapplication-TileColor" content="#ffffff" />
-	<meta name="publisher" content="Majestico" />
+	<meta name="theme-color" content={siteConfig.themeColor} />
+	<meta name="msapplication-TileColor" content={siteConfig.themeColor} />
+	<meta name="publisher" content={siteConfig.author} />
 	<meta name="generator" content={Astro.generator} />
 
 	<ClientRouter />
