--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -101,25 +101,27 @@
 
 	/* Typography */
 	@font-face {
-		font-family: 'Inter';
+		font-family: "Inter";
 		font-style: normal;
 		font-weight: 100 900;
 		font-display: swap;
 		src: url("/fonts/inter-latin-ext.woff2") format("woff2");
-		unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+		unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF,
+			U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 	}
 
 	@font-face {
-		font-family: 'Inter';
+		font-family: "Inter";
 		font-style: normal;
 		font-weight: 100 900;
 		font-display: swap;
 		src: url("/fonts/inter-latin.woff2") format("woff2");
-		unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+		unicode-range:
+			U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 	}
 
 	@font-face {
-		font-family: 'Inter-fallback';
+		font-family: "Inter-fallback";
 		src: local("Arial");
 		ascent-override: 90.49%;
 		descent-override: 22.56%;
@@ -128,17 +130,9 @@
 	}
 
 	@font-face {
-		font-family: 'CalSans-SemiBold';
-		src: url('/fonts/CalSans-SemiBold.woff2') format('woff2');
+		font-family: "CalSans-SemiBold";
+		src: url("/fonts/CalSans-SemiBold.woff2") format("woff2");
 		font-weight: 600;
-		font-style: normal;
-		font-display: swap;
-	}
-
-	@font-face {
-		font-family: 'Satoshi';
-		src: url('/fonts/satoshi-variable.woff2') format('woff2');
-		font-weight: 300 900;
 		font-style: normal;
 		font-display: swap;
 	}
