--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,9 +2,9 @@
 import Head from "@/components/core/Head.astro";
 ---
 
-<html class="h-full" lang="en" transition:animate="none">
+<html lang="en" transition:animate="none">
 	<Head />
-	<body class="h-full min-h-screen bg-background font-sans antialiased">
+	<body>
 		<slot />
 	</body>
 </html>
