--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -90,13 +90,14 @@
 		-moz-osx-font-smoothing: grayscale;
 	}
 
-	body {
-		@apply bg-background text-foreground;
-		font-feature-settings: "rlig" 1, "calt" 1;
+	:root {
+		@apply overflow-x-hidden;
+		scrollbar-gutter: stable;
 	}
 
-	:root {
-		scrollbar-gutter: stable;
+	body {
+		@apply bg-background text-foreground h-full min-h-screen font-sans antialiased overflow-x-hidden;
+		font-feature-settings: "rlig" 1, "calt" 1;
 	}
 
 	/* Typography */
