--- a/src/pages/orders/index.astro
+++ b/src/pages/orders/index.astro
@@ -1,6 +1,17 @@
 ---
 import OrdersPage from "@/components/routes/Orders";
 import AuthenticatedLayout from "@/layouts/AuthenticatedLayout.astro";
+import { checkPageRedirect } from "@/lib/authUtils";
+
+const redirect = await checkPageRedirect(
+	Astro.url,
+	Astro.locals.user,
+	Astro.locals.session,
+);
+
+if (redirect) {
+	return Astro.redirect(redirect);
+}
 ---
 
 <AuthenticatedLayout>
