--- a/src/pages/signup.astro
+++ b/src/pages/signup.astro
@@ -1,6 +1,17 @@
 ---
 import { Signup as SignupForm } from "@/components/auth/SignUp";
 import PublicLayout from "@/layouts/PublicLayout.astro";
+import { checkPageRedirect } from "@/lib/authUtils";
+
+const redirect = await checkPageRedirect(
+	Astro.url,
+	Astro.locals.user,
+	Astro.locals.session,
+);
+
+if (redirect) {
+	return Astro.redirect(redirect);
+}
 ---
 
 <PublicLayout>
